mise en place page de login

--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -4,19 +4,17 @@
     border-bottom: #393a3b solid 1px;
     margin-left: auto;
     margin-right: auto;
-    text-align: center;
     width: 70%;
+    display: grid;
+    grid-template-columns: 1fr auto;
+    align-items: center;
+}
 
-    &-link {
-        color: whitesmoke;
-        font-weight: 700;
-        text-decoration: none;
-        justify-self: end; /* Ajout de cette ligne */
-
-        &:hover {
-          text-decoration: underline;
-        }
-      }
+.header-login {
+    color: whitesmoke;
+    font-weight: 700;
+    text-decoration: none;
+    justify-self: end;
 }
 
 .title {
@@ -24,10 +22,8 @@
     font-size: 4rem;
     color: whitesmoke;
     font-family: 'League Gothic', sans-serif;
-}
-
-.header .title span {
-    display: block;
+    grid-column: 1 / -1;
+    text-align: center;
 }
 
 .subtitle {
@@ -36,4 +32,6 @@
     font-size: 1.5rem;
     color: whitesmoke;
     font-family: 'League Gothic', sans-serif;
+    grid-column: 1 / -1;
+    text-align: center;
 }
