--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -5,16 +5,15 @@
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    width: 70%;
 
     &-subtitle {
-        color: whitesmoke;
+        color: #ffffff;
         padding-bottom: 1rem;
     }
 
     &-link{
         text-decoration: none;
-        color: whitesmoke;
+        color: #ffffff;
 
         &:hover {
             text-decoration: underline;
