--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -4,23 +4,26 @@
     border-bottom: #393a3b solid 1px;
     margin-left: auto;
     margin-right: auto;
-    width: 70%;
     display: grid;
     grid-template-columns: 1fr auto;
     align-items: center;
 }
 
 .header-login {
-    color: whitesmoke;
+    color: #ffffff;
     font-weight: 700;
     text-decoration: none;
     justify-self: end;
+
+    &:hover {
+        text-decoration: underline;
+    }
 }
 
 .title {
     font-weight: 800;
     font-size: 4rem;
-    color: whitesmoke;
+    color: #ffffff;
     font-family: 'League Gothic', sans-serif;
     grid-column: 1 / -1;
     text-align: center;
@@ -30,7 +33,7 @@
     padding-top: 1rem ;
     font-weight: 800;
     font-size: 1.5rem;
-    color: whitesmoke;
+    color: #ffffff;
     font-family: 'League Gothic', sans-serif;
     grid-column: 1 / -1;
     text-align: center;
