--- a/src/components/NavBar/styles.scss
+++ b/src/components/NavBar/styles.scss
@@ -7,11 +7,10 @@
     display: flex;
     justify-content: center;
     gap: 2rem;
-    width: 74.3%;
 } 
   
   .nav-link {
-    color: whitesmoke;
+    color: #ffffff;
     text-decoration: none;
   
     &:hover {
