--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -14,6 +14,7 @@
     font-weight: 700;
     text-decoration: none;
     justify-self: end;
+    margin-bottom: 1rem;
 
     &:hover {
         text-decoration: underline;
