--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -2,40 +2,40 @@
     background-color: #242526;
     padding: 3rem;
     border-bottom: #393a3b solid 1px;
-    margin-left: auto;
-    margin-right: auto;
-    display: grid;
-    grid-template-columns: 1fr auto;
     align-items: center;
-}
-
-.header-login {
+    text-align: center;
+  }
+  
+  .header-nav {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 1rem;
+  }
+  
+  .header-login {
     color: #ffffff;
     font-weight: 700;
     text-decoration: none;
-    justify-self: end;
-    margin-bottom: 1rem;
-
+    margin-left: 1rem;
+  
     &:hover {
-        text-decoration: underline;
+      text-decoration: underline;
     }
-}
-
-.title {
+  }
+  
+  .title {
     font-weight: 800;
     font-size: 4rem;
     color: #ffffff;
     font-family: 'League Gothic', sans-serif;
-    grid-column: 1 / -1;
-    text-align: center;
-}
-
-.subtitle {
-    padding-top: 1rem ;
+    margin-top: 1rem;
+  }
+  
+  .subtitle {
     font-weight: 800;
     font-size: 1.5rem;
     color: #ffffff;
     font-family: 'League Gothic', sans-serif;
-    grid-column: 1 / -1;
-    text-align: center;
-}
+    margin-top: 1rem;
+  }
+  
