admin page and article dashboard in progress

--- a/src/pages/LoginPage/styles.scss
+++ b/src/pages/LoginPage/styles.scss
@@ -5,8 +5,7 @@
   font-size: 2rem;
   display: flex;
   justify-content: flex-end;
-  margin-top: 20px;
-  margin-right: 20px;
+  margin: 2rem 3rem 0 0;
   text-decoration: none;
 
   &:hover {
