--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 :root {
     font-family: 'Gasoek One', sans-serif;
-    background-color: #18191a;
-
+    background-color: #18191ae0;
+    width: 70%;
+    padding-left: 15%;
 }
