--- a/src/pages/HomePage/styles.scss
+++ b/src/pages/HomePage/styles.scss
@@ -3,5 +3,16 @@
     text-align: center;
     margin-left: auto;
     margin-right: auto;
+    max-width: 75%;
+}
+
+.news-title {
+    font-size: 2rem;
+    font-weight: 700;
     padding: 2rem 0 2rem 0;
+
+}
+
+.article-card {
+    border-bottom: 1px solid darkgray;
 }
