--- a/src/components/Article/styles.scss
+++ b/src/components/Article/styles.scss
@@ -33,15 +33,18 @@
     display: flex;
     flex-wrap: wrap;
     margin-left: auto;
+    
 }
 
 .article-tag {
+    display: inline-block;
     padding: 0.5rem;
     font-weight: 700;
     color: #fff;
     border: 1px solid #fff;
     border-radius: 8px;
     font-size: small;
+    cursor: pointer;
 }
 
 .article-content {
