--- a/src/pages/ArticleDashboardPage/styles.scss
+++ b/src/pages/ArticleDashboardPage/styles.scss
@@ -1,8 +1,3 @@
-.quill-wrapper {
-    width: 70%;
-    margin: 2rem auto;
-  }
-  
 .form-group {
   margin: 2rem 0 2rem 25% ;
 }
@@ -15,10 +10,14 @@
 }
 
 .title-input {
-  margin-bottom: 1rem;
+  width: 20%;
+  font-size: 1.25rem;
+  font-weight: 700;
+  padding: 0.5rem;
+  border: 1px solid #cccccc;
   border-radius: 5px;
-  border: 0.5px solid #cccccc;
-  text-decoration: none;
+  margin-left: 25%;
+  margin-top: 2rem;
 }
 
 .tag-section {
@@ -46,6 +45,31 @@
 
   }
 }
+
+.selected-tag {
+  display: inline-block;
+  margin-right: 8px;
+  padding: 4px 8px;
+  border-radius: 4px;
+  background-color: #f0f0f0;
+  color: #333;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #e0e0e0;
+    cursor: pointer;
+  }
+
+  .tag-name {
+    margin-right: 4px;
+  }
+
+  .tag-close-btn {
+    font-weight: bold;
+    color: #ff3333;
+  }
+}
+
 
 .submit-button {
   font-size: 1.5rem;
