Tag pages with sorted articles OK

--- a/src/components/Article/styles.scss
+++ b/src/components/Article/styles.scss
@@ -9,6 +9,9 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
   
+  .article-picture {
+    margin: 0 auto;
+  }
   .article-tags-container {
     display: flex;
     align-items: center;
