--- a/src/pages/ArticleDashboardPage/styles.scss
+++ b/src/pages/ArticleDashboardPage/styles.scss
@@ -25,6 +25,17 @@
   margin-top: 2rem;
 }
 
+.image-upload {
+  width: 20%;
+  font-size: 1.25rem;
+  font-weight: 700;
+  padding: 0.5rem;
+  border: 1px solid #cccccc;
+  border-radius: 5px;
+  margin-left: 25%;
+  margin-top: 2rem;
+}
+
 .tag-section {
   margin: 2rem 0 2rem 25%;
   font-weight: 700;
