--- a/src/components/ArticleCard/styles.scss
+++ b/src/components/ArticleCard/styles.scss
@@ -1,17 +1,19 @@
-.article-card-container {
+.article-card{
+  
+  &-container {
     border-top: 1px solid #ccc;
     margin: 10px;
     padding: 10px;
     background-color: #fff;
     padding-top: 3rem;
-    
   }
-  
-  .article-card-picture {
+
+  &-picture {
     display: inline;
     margin: 0 auto;
   }
-  .article-card-title {
+
+  &-title {
     font-size: 1.2rem;
     margin: 0;
     margin-bottom: 10px;
@@ -24,15 +26,15 @@
       }
     }
   }
-  
-  .article-card-content {
+
+  &-content {
     margin-bottom: 10px;
     p {
       margin: 0;
     }
   }
-  
-  .article-tags {
+
+  &-tags {
     display: flex;
     flex-wrap: wrap;
     list-style: none;
@@ -42,5 +44,6 @@
     li {
       margin-left: 10px;
     }
+
   }
-  
+}
