--- a/src/components/CommentSection/styles.scss
+++ b/src/components/CommentSection/styles.scss
@@ -1,43 +1,51 @@
-
-.comment-section {
+.comment {
+  margin-bottom: 20px;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+ 
+  &-section {
     background-color: #f7f7f7;
     border: 1px solid #ccc;
     border-radius: 8px;
     margin: 1rem 0 1rem 0;
     padding: 2rem;
+
+    h3 {
+      font-size: 1.5rem;
+      margin-bottom: 20px;
+    }
   }
-  
-  .comment-section h3 {
-    font-size: 1.5rem;
-    margin-bottom: 20px;
-  }
-  
-  .comment {
-    margin-bottom: 20px;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-  }
-  
-  .comment-header {
+
+  &-header {
     display: flex;
     justify-content: space-between;
     margin-bottom: 10px;
   }
-  
-  .comment-author {
+
+  &-author {
     font-weight: bold;
   }
-  
-  .comment-date {
+
+  &-date {
     color: #777;
     font-style: italic;
   }
-  
-  .comment-content {
+
+  &-content {
     font-size: 1.1rem;
   }
-  
+
+  &-button {
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+}
+
   textarea {
     width: 100%;
     padding: 10px;
@@ -46,16 +54,7 @@
     border: 1px solid #ddd;
     border-radius: 4px;
   }
-  
-  .comment-button {
-    background-color: #007bff;
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
+    
   p a {
     color: #007bff;
     text-decoration: none;
