--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
 ul,
 ol {
   list-style: none;
-  padding-left: 0; /* Optional: Removes the default left padding for lists */
+  padding-left: 0;
 }
 
 a{
