--- a/src/pages/TagPage/styles.scss
+++ b/src/pages/TagPage/styles.scss
@@ -1,15 +1,16 @@
 .tagpage {
+
     background-color: white;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
     max-width: 75%;
-}
 
-.tagpage-title {
-    font-size: 2rem;
-    font-weight: 700;
-    padding: 2rem 0 2rem 0;
+         &-title {
+        font-size: 2rem;
+        font-weight: 700;
+        padding: 2rem 0 2rem 0;
+    } 
 }
 
 
