--- a/src/components/NavBar/styles.scss
+++ b/src/components/NavBar/styles.scss
@@ -1,20 +1,44 @@
 .navbar {
-    background-color: #242526;
-    padding: 1rem;
-    border-bottom: #393a3b solid 1px;
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-    justify-content: center;
-    gap: 2rem;
-} 
-  
-  .nav-link {
-    color: #ffffff;
-    text-decoration: none;
-  
-    &:hover {
-      text-decoration: underline;
-    }
+  background-color: #242526;
+  padding: 1rem;
+  border-bottom: #393a3b solid 1px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.navbar-menu-icon {
+  font-size: 24px;
+  cursor: pointer;
+  color: #ffffff;
+  @media screen and (min-width: 530px) {
+    display: none; 
   }
-  
+}
+
+.navbar-nav {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  @media screen and (max-width: 530px) {
+    display: none; 
+    flex-direction: column;
+    position: absolute;
+    top: 100%; 
+    right: 0;
+    background-color: #242526;
+    width: 100%;
+    padding: 1rem;
+  }
+}
+
+.nav-link {
+  color: #ffffff;
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
