--- a/src/pages/ForgotPage/styles.scss
+++ b/src/pages/ForgotPage/styles.scss
@@ -20,10 +20,12 @@
   justify-content: center;
   align-items: center;
   height: 90vh;
+  background-color: #242526;
 
   .title {
     font-size: 4rem;
     margin-bottom: 1rem;
+    color: #ffffff;
   }
 
   .forgot-form {
@@ -33,25 +35,27 @@
     border: 1px solid #000000;
     border-radius: 1rem;
 
+
     label {
       display: block;
       margin-bottom: 10px;
     }
 
     input {
-      width: 100%;
+      width: 90%;
       padding: 5px;
-      margin-bottom: 10px;
+      margin-bottom: 1rem;
     }
 
     button {
-      width: 100%;
+      width: 93%;
       padding: 10px;
       background-color: #4caf50;
       color: #ffffff;
       border: none;
       cursor: pointer;
       border-radius: 5px;
+      transition: background-color 0.2s ease-in-out;
     }
 
     button:hover {
