--- a/src/pages/LoginPage/styles.scss
+++ b/src/pages/LoginPage/styles.scss
@@ -20,9 +20,15 @@
   align-items: center;
   height: 90vh;
 
+  &-container {
+    background-color: #242526;
+
+  }
+
   .title {
     font-size: 4rem;
     margin-bottom: 1rem;
+    color: #ffffff;
   }
 
   .login-form {
@@ -41,16 +47,19 @@
       width: 100%;
       padding: 5px;
       margin-bottom: 10px;
+      width: 97%;
     }
 
     button {
       width: 100%;
       padding: 10px;
+      margin-top: 1rem;
       background-color: #4caf50;
       color: #ffffff;
       border: none;
       cursor: pointer;
       border-radius: 5px;
+      transition: background-color 0.2s ease-in-out;
     }
 
     button:hover {
