--- a/src/pages/SigninPage/styles.scss
+++ b/src/pages/SigninPage/styles.scss
@@ -68,7 +68,7 @@
       text-align: center;
 
       a {
-        color: #000000;
+        color: #007bff;
         text-decoration: none;
         font-weight: 700;
       }
