--- a/src/pages/ForgotPage/styles.scss
+++ b/src/pages/ForgotPage/styles.scss
@@ -19,7 +19,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 90vh;
+  height: 80vh;
   background-color: #242526;
 
   .title {
@@ -29,7 +29,7 @@
   }
 
   .forgot-form {
-    width: 30rem;
+    width: 20%;
     padding: 4rem;
     background-color: #ffffff;
     border: 1px solid #000000;
@@ -62,5 +62,16 @@
       background-color: #45a049;
     }
 
+    a{
+      font-weight: 700;
+    }
+
+  }
+}
+
+@media screen and (max-width: 610px) {
+  button,input,form {
+    width: 1rem; /* Ajustez la largeur comme vous le souhaitez */
+    padding: 2rem; /* Ajustez les espacements en conséquence */
   }
 }
