--- a/src/pages/RecoverPage/styles.scss
+++ b/src/pages/RecoverPage/styles.scss
@@ -1,7 +1,74 @@
-.recover-container {
+:root {
     background-color: #242526;
 }
 
-.form-link a{
-    font-weight: 700;
-}
+  .recover {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
+  
+    .title {
+      font-size: 4rem;
+      margin-bottom: 1rem;
+      color: #ffffff;
+    }
+  
+    .recover-form {
+      width: 25%;
+      padding: 4rem;
+      background-color: #ffffff;
+      border: 1px solid #000000;
+      border-radius: 1rem;
+  
+      label {
+        display: block;
+        margin-bottom: 10px;
+      }
+  
+      input {
+        width: 100%;
+        padding: 5px;
+        margin-bottom: 10px;
+        width: 97%;
+      }
+  
+      button {
+        width: 100%;
+        padding: 10px;
+        margin-top: 1rem;
+        background-color: #4caf50;
+        color: #ffffff;
+        border: none;
+        cursor: pointer;
+        border-radius: 5px;
+        transition: background-color 0.2s ease-in-out;
+      }
+  
+      button:hover {
+        background-color: #45a049;
+      }
+  
+      .form-link {
+        margin-top: 20px;
+        text-align: center;
+  
+        a {
+          text-decoration: none;
+          font-weight: 700;
+        }
+  
+        a:hover {
+          text-decoration: underline;
+        }
+      }
+  
+      p {
+        margin-top: 20px;
+        text-align: center;
+      }
+    }
+  }
+  
+
