--- a/src/pages/SigninPage/styles.scss
+++ b/src/pages/SigninPage/styles.scss
@@ -29,7 +29,7 @@
   }
 
   .signin-form {
-    width: 30rem;
+    width: 25%;
     padding: 4rem;
     background-color: #ffffff;
     border: 1px solid #000000;
