--- a/src/components/CommentSection/styles.scss
+++ b/src/components/CommentSection/styles.scss
@@ -3,6 +3,9 @@
   padding: 10px;
   border: 1px solid #ddd;
   border-radius: 4px;
+  word-break: break-all;
+  display: flex;
+  flex-direction: column;
 
   &-section {
     background-color: #f7f7f7;
@@ -55,6 +58,25 @@
     border-radius: 4px;
     cursor: pointer;
   }
+
+  &-button-delete {
+    margin-right: 1rem;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    font-weight: 700;
+    color: #fff;
+    background-color:#dc3545;
+  
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    text-decoration: none;
+    transition: background-color 0.2s ease-in-out;
+  
+    &:hover {
+      background-color:#c82333;
+    }
+  }
 }
 
   textarea {
@@ -74,4 +96,7 @@
     text-decoration: underline;
     }
   }
+  
+ 
+
   
